--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -121,7 +121,7 @@
     <div class="brand-text"><strong>Open</strong>Shift</div>
   </a>
   <h1>
-    Welcome to OpenShift, JBossAS7 Cartridge
+    Welcome to OpenShift, now editable via github and maxs ipad :)
   </h1>
   <p>
     Place your application here
